# coins

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  train.py
src/: coin.py  decorators.py  file.py  test.py
