[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/"]

[project]
name = "coins"
description = "A Python library for managing COINS"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = ["word2number"] # would like to see this removed in the future